test/js/bun/test/__snapshots__/test-test.test.ts.snap
// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`unhandled errors between tests are reported in beforeAll 1`] = `
"
my-test.test.js:

# Unhandled error between tests
-------------------------------
1 | import {test, beforeAll, expect, beforeEach, afterEach, afterAll, describe} from "bun:test";
2 |
3 | beforeAll(async () => {
4 |   Bun.sleep(1).then(() => {
5 |     throw new Error('## stage beforeAll ##');
              ^
error: ## stage beforeAll ##
      at <dir>/my-test.test.js:5:11
-------------------------------

(pass) my-test

 1 pass
 0 fail
 1 error
Ran 1 tests across 1 files.
"
`;

exports[`unhandled errors between tests are reported in beforeEach 1`] = `
"
my-test.test.js:
1 | import {test, beforeAll, expect, beforeEach, afterEach, afterAll, describe} from "bun:test";
2 |
3 | beforeEach(async () => {
4 |   Bun.sleep(1).then(() => {
5 |     throw new Error('## stage beforeEach ##');
              ^
error: ## stage beforeEach ##
      at <dir>/my-test.test.js:5:11
(fail) my-test

 0 pass
 1 fail
Ran 1 tests across 1 files.
"
`;

exports[`unhandled errors between tests are reported in afterEach 1`] = `
"
my-test.test.js:
(pass) my-test

# Unhandled error between tests
-------------------------------
1 | import {test, beforeAll, expect, beforeEach, afterEach, afterAll, describe} from "bun:test";
2 |
3 | afterEach(async () => {
4 |   Bun.sleep(1).then(() => {
5 |     throw new Error('## stage afterEach ##');
              ^
error: ## stage afterEach ##
      at <dir>/my-test.test.js:5:11
-------------------------------


 1 pass
 0 fail
 1 error
Ran 1 tests across 1 files.
"
`;

exports[`unhandled errors between tests are reported in afterAll 1`] = `
"
my-test.test.js:
(pass) my-test

# Unhandled error between tests
-------------------------------
1 | import {test, beforeAll, expect, beforeEach, afterEach, afterAll, describe} from "bun:test";
2 |
3 | afterAll(async () => {
4 |   Bun.sleep(1).then(() => {
5 |     throw new Error('## stage afterAll ##');
              ^
error: ## stage afterAll ##
      at <dir>/my-test.test.js:5:11
-------------------------------


 1 pass
 0 fail
 1 error
Ran 1 tests across 1 files.
"
`;

exports[`unhandled errors between tests are reported in describe 1`] = `
"
my-test.test.js:

# Unhandled error between tests
-------------------------------
1 | import {test, beforeAll, expect, beforeEach, afterEach, afterAll, describe} from "bun:test";
2 |
3 | describe(async () => {
4 |   Bun.sleep(1).then(() => {
5 |     throw new Error('## stage describe ##');
              ^
error: ## stage describe ##
      at <dir>/my-test.test.js:5:11
      at <dir>/my-test.test.js:3:1
-------------------------------

(pass) my-test

 1 pass
 0 fail
 1 error
Ran 1 tests across 1 files.
"
`;

exports[`expect().toEqual() on objects with property indices doesn't print undefined 1`] = `
"expect(received).toEqual(expected)

  {
+   "0": 0,
+   "1": 1,
+   "10": 10,
+   "11": 11,
+   "12": 12,
+   "13": 13,
+   "14": 14,
+   "15": 15,
+   "2": 2,
+   "3": 3,
+   "4": 4,
+   "5": 5,
+   "6": 6,
+   "7": 7,
+   "8": 8,
+   "9": 9,
-   "0": 123,
-   "1": 123,
-   "10": 123,
-   "11": 123,
-   "12": 123,
-   "13": 123,
-   "14": 123,
-   "15": 123,
-   "2": 123,
-   "3": 123,
-   "4": 123,
-   "5": 123,
-   "6": 123,
-   "7": 123,
-   "8": 123,
-   "9": 123,
  }

- Expected  - 16
+ Received  + 16"
`;
